Add Cucumber JVM support
* add `cucumber-jvm` dependencies
* add required Gradle tasks for Cucumber with respective configuration
* add smoke test scenario to check if all Cucumber dependencies and
configurations work as expected
* change GitHub Actions workflow to run `cucumber` task instead of
`build`, since `build` doesn't run tests

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,5 +19,5 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11.0.x
-    - name: Build with Gradle
-      run: ./gradlew build
+    - name: Run Cucumber tests
+      run: ./gradlew cucumber
