--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,4 @@
-name: Java CI
+name: Kotlin CI with Gradle
 
 on: 
   push:
@@ -7,6 +7,8 @@ on:
   pull_request:
     branches: 
       - master
+  schedule:
+    - cron: "0 20 * * *"
 
 jobs:
   build:
